--- a/atsiskaitymas/style.css
+++ b/atsiskaitymas/style.css
@@ -1,39 +1,84 @@
-/* Add this CSS to your stylesheet or in a <style> tag in your HTML file */
-
-body{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: darkslategray;
 }
 
-form {
-    width: 300px; /* Set the width of the form */
-    margin: 20px auto; /* Center the form on the page */
+div#buttonContainer {
+  box-sizing: border-box;
+  margin-top: 2em;
+  display: flex;
+  justify-content: center;
+}
+
+div#formContainer {
+  box-sizing: border-box;
+  margin: 2em 0px 0px 0px;
+  display: flex;
+  justify-content: center;
+}
+
+div#cardContainer {
+  box-sizing: border-box;
+  margin: 2em 0px 0px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 input {
-    display: block;
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 3px solid black;
-}
-
-input{
-    font-size: large;
+  font-size: large;
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 3px solid black;
 }
 
 input[type="submit"] {
-    background-color: #4CAF50; /* Green submit button color */
-    color: white;
-    cursor: pointer;
+  background-color: #4caf50;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
 }
 
-button{
-    box-sizing: border-box;
-    height: 5em;
-    width: 10em;
-    justify-content: center;
+button {
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: 3px solid black;
+  height: 5em;
+  width: 10em;
+  margin-right: 1em;
+  font-weight: 700;
+}
+button:hover {
+  background-color: rgb(145, 86, 145);
+  font-size: 1em;
+}
+
+h2 {
+  color: rgb(213, 205, 48);
+  font-weight: 800;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+p {
+  font-size: 20px;
+  font-weight: 600;
+  font-style: italic;
+  color: white;
+}
+
+div#card {
+  box-sizing: border-box;
+  border: 4px solid black;
+  padding: 1em;
+  margin: 1em;
+  width: 250px;
+  height: 350px;
 }
